[project]
name = "inspect-test-utils"
version = "0.1.0"
description = "Simple models and tasks for integration testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "inspect-ai",
]

[project.optional-dependencies]
dev = [
  "basedpyright",
  "pytest-asyncio",
  "pytest-mock",
  "pytest",
  "ruff",
  "types-aiofiles",
  "types-pyyaml",
  "types-requests",
]

[project.entry-points.inspect_ai]
inspect_test_utils = "inspect_test_utils._registry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
  # Use modern Python imports (i.e., don't require __init__.py files everywhere)
  "--import-mode=importlib",
  # Require markers to be explicitly defined
  "--strict-markers",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
